--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row-one">
-          <img class="skill-image-Programming" src="images/Programming.png" alt="programmer-img">
+          <img class="skill-image-Programming" src="images/pr.png" alt="programmer-img">
           <h3>Programming</h3>
           <p>Have a extensive knowledge in Python , C++ JavaScript and Java.
             <br>
