update some content

--- a/index.html
+++ b/index.html
@@ -30,17 +30,15 @@
         <div class="skill-row-one">
           <img class="skill-image-Programming" src="images/pr.png" alt="programmer-img">
           <h3>Programming</h3>
-          <p>Have a extensive knowledge in Python , C++ JavaScript and Java.
+          <p>Have extensive knowledge in Python(have project on GitHub with Flask, Selenuim, BeautifulSoup, turtle) , C++ JavaScript(React and Node , also have projects on GitHub) and Java.
             <br>
-            also work with C, Html, CSS, Scheme, Assembly , React ,Node.js , Linux.
+            also work with C, Html, CSS, Scheme, Assembly, SQL, and have experience in Linux , OOP , multi-threading.
           </div>
         <div class="skill-row-two">
           <img class="skill-image-think" src="images/think.png" alt="think-img">
           <h3>BSc in Computer Science</h3>
           <p>From Ben Gurion University (GPA: 83/100).
-            I'm self learner, high motivated and hava passion about programming.
-
-
+            I'm self learner, high motivated and have passion about programming.
           </p>
         </div>
       <hr>
