update some content

--- a/index.html
+++ b/index.html
@@ -18,33 +18,35 @@
     <div class="middle-container">
       <div class="profile">
         <img src="images/profile_picture-modified.png" alt="profile_picture" height=200px width=200px>
-        <h2>Hello.</h2>
-        <p>My name is Hanan Buskila and i'm looking for my first job as Software Engineer| Full Stack Developer</p>
+        <h2>Hello</h2>
+        <p>My name is Hanan Buskila and I'm looking for my first job as Software Engineer| Full Stack Developer</p>
 
         <br>
         <hr>
         <br>
       </div>
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2>My Skills</h2>
         <div class="skill-row-one">
           <img class="skill-image-Programming" src="images/pr.png" alt="programmer-img">
           <h3>Programming</h3>
-          <p>Have extensive knowledge in Python(have project on GitHub with Flask, Selenuim, BeautifulSoup, turtle) , C++ JavaScript(React and Node , also have projects on GitHub) and Java.
+          <p>I have extensive knowledge in Python (project on GitHub with Flask, Selenuim, BeautifulSoup, turtle),
+            C++, JavaScript (Work with React and Node, and I have projects on GitHub) and Java.
             <br>
-            also work with C, Html, CSS, Scheme, Assembly, SQL, and have experience in Linux , OOP , multi-threading.
+            In addition, I work with C, Html, CSS, Scheme, Assembly,
+            SQL, and I have experience in Linux, OOP, multi-threading.
           </div>
         <div class="skill-row-two">
           <img class="skill-image-think" src="images/think.png" alt="think-img">
           <h3>BSc in Computer Science</h3>
           <p>From Ben Gurion University (GPA: 83/100).
-            I'm self learner, high motivated and have passion about programming.
+            I'm a self-learner, highly motivated and have passion for programming.
           </p>
         </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>if you have a job offer for me 😉.</h3>
+        <h3>If you have a job offer for me 😉.</h3>
         <a class="btn" href="mailto:hananbusw@gmail.com">CONTACT ME</a>
         <br><br>
       </div>
