update some content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             C++, JavaScript (Work with React and Node, and I have projects on GitHub) and Java.
             <br>
             In addition, I work with C, Html, CSS, Scheme, Assembly,
-            SQL, and I have experience in Linux, OOP, multi-threading.
+            SQL, and I have experience with Linux, OOP and multi-threading.
           </div>
         <div class="skill-row-two">
           <img class="skill-image-think" src="images/think.png" alt="think-img">
